fix width of skill names on mobile

--- a/public/Assets/css/view.css
+++ b/public/Assets/css/view.css
@@ -309,6 +309,10 @@ input[type=text], select, textarea {
     padding-top:35vh;
 }
 
+.skills {
+    width: 28%;
+}
+
 
 }
 
